--- a/css/git.css
+++ b/css/git.css
@@ -1,11 +1,15 @@
 body {
-  background-color: #800020;
-  font-family: 'Shadows Into Light', cursive;
+  background-color: #da3d64;
+  font-family: "Dancing Script", cursive;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
 
 }
 .postcard{
   /*grid for post card*/
    display:grid;
+   
     grid-template-columns: .80fr .30fr ;
     grid-template-rows: 1fr  1fr ;
     grid-template-areas:
@@ -47,14 +51,14 @@ h1 {
 }
 
 #from{
-    font-size: 125%;
+    font-size: 130%;
     display: flex;
     align-items: center;
     text-align: center;
     grid-area: from;
 }
 #message{
-  font-size: 119%;
+  font-size: 155%;
   grid-area: note;  
   margin-right: 7%;
 }
@@ -66,7 +70,7 @@ h1 {
   padding-top: 30%;
   text-decoration: underline;
   grid-area: test;
-  color:red;
+  color:rgb(43, 34, 172);
 }
 
 
