Add new project hungbeo

--- a/css/github.css
+++ b/css/github.css
@@ -1,7 +1,7 @@
 #front {
   z-index: 1;
   position: absolute;
-  background-color: #3176b6;
+  background-color: #559de0;
   width:600px;
   height: 680px;
   text-align: center;
